TS-66 + implemented toList