@@ -2,12 +2,14 @@ package nl.miwgroningen.ch10.topshelf.service;
 import nl.miwgroningen.ch10.topshelf.dto.StockProductDTO;
 import nl.miwgroningen.ch10.topshelf.exception.StockProductNotFoundException;
 import nl.miwgroningen.ch10.topshelf.mapper.StockProductDTOMapper;
+import nl.miwgroningen.ch10.topshelf.model.Pantry;
+import nl.miwgroningen.ch10.topshelf.model.StockProduct;
 import nl.miwgroningen.ch10.topshelf.repository.StockProductRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
+import java.util.Comparator;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * @author Jack Wieringa <j.w.wieringa@st.hanze.nl>
@@ -30,7 +32,7 @@ public class StockProductService {
         return stockProductRepository.findAll()
                 .stream()
                 .map(stockProductDTOMapper)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public StockProductDTO findStockProductByStockProductId(Long stockProductId) {
@@ -39,12 +41,11 @@ public class StockProductService {
                 .orElseThrow(() -> new StockProductNotFoundException("StockProduct with id: " + stockProductId + " was not found!"));
     }
 
-    public List<StockProductDTO> findStockProductByPantryId(Long pantryId) {
-        return stockProductRepository
-                .findAll()
+    public List<StockProductDTO> findStockProductByPantry(Pantry pantry) {
+        return stockProductRepository.findStockProductsByPantry(pantry)
                 .stream()
-                .filter(stockProduct -> Objects.equals(stockProduct.getPantry().getPantryId(), pantryId))
+                .sorted(Comparator.comparing(StockProduct::getExpirationDate))
                 .map(stockProductDTOMapper)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
